--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Naman Bhardwaj</title>
-    <link rel="stylesheet" href="style/stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
     <link rel="favicon" href="favicon.io">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
