--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>If you love the web design and development.</h3>
-        </h4>Email me with any questions or inquiries or DM me at my social media accounts listed below.
+        <h4>Email me with any questions or inquiries or DM me at my social media accounts listed below.
         I would be happy to answer your questions and set up a meeting with you.</h4>
         <a class="btn" href="mailto:namanbhardwaj0089@gmail.com">CONTACT ME</a>
       </div>
